--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "club-saludable",
   "version": "1.0.0",
@@ -10,5 +9,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
